# microservice-energy-consumption-benchmark

./: README.md
go/: .greenframe.yml  Dockerfile  README.md  Tiltfile  (+8 more)
rust/: .dockerignore  .greenframe.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  Tiltfile  docker-compose-slim-template.yaml  docker-compose.yaml  run-kubectl-top.sh  usage_scenario.yml  usage_scenario_app_only.yml
rust/http/: app.http  http-client.env.json
rust/k6/: script.js
rust/kustomize/base/: deployment.yaml  horizontal-pod-autoscaler.yaml  kustomization.yaml  service.yaml
rust/kustomize/base/resources/migrations/: V0.1.0.0__create-data-table.sql
rust/kustomize/environment/local/: init-container-patch.yaml  kustomization.yaml  namespace.yaml
rust/kustomize/environment/local/database/: deployment.yaml  kustomization.yaml  service.yaml
rust/kustomize/environment/local/hoverfly/: deployment.yaml  kustomization.yaml  service.yaml
rust/kustomize/environment/local/jaeger/: deployment.yaml  service.yaml
rust/kustomize/environment/local/otel-collector/: deployment.yaml  kustomization.yaml  service.yaml
rust/kustomize/environment/local/otel-collector/image/: Dockerfile  otel-collector-config.yaml
rust/kustomize/environment/local/resources/flyway/: V1.00.000__Init.sql
rust/kustomize/environment/local/wiremock/: deployment.yaml  service.yaml
rust/resources/: openapi.yaml
rust/src/: access_log.rs  data.rs  database.rs  delay.rs  health.rs  main.rs  resources.rs
rust/src/sample/: api.rs  mod.rs  resource.rs  steps.rs  storage.rs
rust/src/shared/: database.rs  health.rs  mod.rs
rust/test/flyway/: V1.00.000__Init.sql  V1.00.001__Data.sql
rust/test/http/: application.http  http-client.env.json
rust/test/k6/: script.js
services/rust-actix/: Cargo.toml  Tiltfile  docker-compose.yaml
services/rust-actix/kustomize/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
services/rust-actix/kustomize/backend/: deployment.yaml  service.yaml
services/rust-actix/src/: main.rs
services/rust-actix/src/sample/: backend.rs  first.rs  mod.rs  resource.rs  second.rs  third.rs
services/rust-actix/src/shared/: auth.rs  health.rs
tools/backend/: .dockerignore  .editorconfig  Cargo.toml  Dockerfile  README.md
tools/backend/src/: main.rs
tools/backend/test/http/: endpoints.http
tools/backend/test/k6/: script.js
(+350 files in other folders)
