[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# lto = true # enable link-time optimization

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0" #TODO
# TODO log = "0.4"
# TODO ecs-logger = "1"
# TODO futures = "0.3"
