[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38",  features = ["serde"]  }
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
md5 = "0.7.0"
base64 = "0.22.0"
itertools = "0.12.1"
