[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.37.0"
rand = "0.8.5"
chrono = { version = "0.4.38",  features = ["serde"]  }
